adds questions redirect and completion page

--- a/templates/question.html
+++ b/templates/question.html
@@ -15,6 +15,11 @@
       </p>
       {% endfor %}
 
+      <input
+          type="hidden"
+          name="question-id"
+          value="{{ question_id }}">
+
     <button>Continue</button>
   </form>
 
