weird bug cant run flask

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+{% for msg in get_flashed_messages() %}
+<h2>{{ msg }}</h2>
+{% endfor %}
+
 {% block content %}
 {% endblock %}
 
