--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="/homeX" method="POST">
+<form action="/home" method="POST">
     <label for="survey-type">Choose Your Survey</label>
     <select name="survey-type">
       <option value="satisfaction">Satisfaction Survey</option>
